modules/webgl/tests/006.vs.exp
"006.vs":18: L0001: Parse error:

lighto lights[numLights];
uniform vec4 lightPosition[4];
uniform vec4 lightPosition[4];

int f()
{
