modules/webgl/tests/006.vs
struct T3
{
    int x;
    int x;
    int y;
    int y;
};
float frequencies[3];
uniform vec4 lightPosition[4];
uniform vec4 lightPosition[4];

const int numLights = 2;
struct light
{
    float intensity;
    vec3  position;
};
lighto lights[numLights];
uniform vec4 lightPosition[4];
uniform vec4 lightPosition[4];

int f()
{
    for (int i = 0; i < 4; i++)
       int v = 2, y =3 ;
    int x1;
    int z = 2;
    {
	int x1 = 2, y = x1;
	int z = z;
	
	return z;
    }
}
